--- a/hmmer/templates/clades.html
+++ b/hmmer/templates/clades.html
@@ -6,54 +6,134 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
+
+            <h2><a href="#">{{ title }}</a></h2>
             <div id="flip-scroll">
-            <table class="table-bordered table-condensed table-striped cf"> 
-                <thead>
-                    <tr>
-                    <th>sample</th>
-                    {% for header in all_headers %}
-                    <th>{{header}}</th> 
-                    {% endfor %}
-                    <th><a href="{% url "dlDetailed" id %}">Detailed Count</a></th>
-                </tr>
-            </thead>
-            <tbody>
-                    {% for dir in dirs %}
-                    <tr class="{% cycle '' 'altrow' %}">
-                        <td>{{ dir }}</td>
+                <table class="table-bordered table-condensed table-striped cf"> 
 
-                        {% for key in all_headers %}
-                        <td>{{all_counts|dictvalue:dir|dictvalue:key}}%</td>
+                    <thead>
+                        <tr>
+                            {% for header in all_headers %}
+                            <th>{{header}}</th> 
+                            {% endfor %}
+                            <th><a href="{% url "dlDetailed" id %}">Detailed Count</a></th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        {% for row in all_counts %}
+                        <tr class="{% cycle '' 'altrow' %}">
+
+                            {% for header in all_headers %}
+                            {% if forloop.first %}
+                            <td> {{ row|dictvalue:header }}</td>
+                            {% else %}
+                            <td>{{ row|dictvalue:header }}%</td>
+                            {% endif %}
+                            {% endfor %}
+                            <td>
+                                <a class="btn btn-default" data-toggle="modal" href="#lightbox{{ forloop.counter }}">View Chart</a>
+                            </td>
+                        </tr>
                         {% endfor %}
-                        <td>
-                            <a class="opener" title="{{ dir }}" rel="group1" href="{% url 'chart' id dir  %}">View Chart</a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                    </tbody>
+
+                </table>
+            </div>
 
 
-            <script type="text/javascript">
-                $("a.opener").fancybox({
-                        'type': 'ajax',
-                        'autoSize': false,
-                        'autoCenter': true,
-                        'fitToView': true,
-                        'width': 350,
-                        'height': 300,
-                        'helpers': {
-                        'title': {
-                        'type': 'outside'
-                        }
-                        },
-                        'arrows': false,
-                        'scrolling': 'no'
-                        }); 
-</script>
+            <!-- Button trigger modal -->
+            <!--<a data-toggle="modal" href="#lightbox1" class="btn btn-primary btn-lg">Launch demo modal</a>-->
+            {% for row in detailed_counts %}
+            <div id="lightbox{{ forloop.counter }}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div id="chart_div_{{ forloop.counter }}" style="width:500px; height:300px;"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            {% endfor %}
 
-            {% endblock %}
+
+
+        </div>
+    </div>
+</div>
+
+<!--[> Modal <]-->
+<!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">-->
+    <!--<div class="modal-dialog">-->
+        <!--<div class="modal-content">-->
+            <!--<div class="modal-header">-->
+                <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>-->
+                <!--<h4 class="modal-title">Modal title</h4>-->
+                <!--</div>-->
+            <!--<div class="modal-body">-->
+                <!--...-->
+                <!--<div id="chart_div_1" style="width:400px; height: 300px;"></div>-->
+                <!--</div>-->
+            <!--<div class="modal-footer">-->
+                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+                <!--</div>-->
+            <!--</div>[> /.modal-content <]-->
+        <!--</div>[> /.modal-dialog <]-->
+    <!--</div>[> /.modal <]-->
+
+
+
+<!--<script type="text/javascript">-->
+    <!--$('.thumbnail').click(function() {-->
+            <!--$('.modal-body').empty();-->
+            <!--var title = $(this).parent('a').attr("title");-->
+            <!--$('.modal-title').html(title);-->
+            <!--$($(this).parents('div').html()).appendTo('.modal-body');-->
+            <!--$('#myModal').modal({show:true});-->
+            <!--});-->
+    <!--</script>-->
+
+
+<script type="text/javascript">
+
+    // Load the Visualization API and the piechart package.
+google.load('visualization', '1.0', {'packages':['corechart'],"callback":drawCharts});
+
+// Set a callback to run when the Google Visualization API is loaded.
+//google.setOnLoadCallback(drawCharts);
+
+function drawCharts() {
+    {% for row in detailed_counts %}
+    drawChart_{{ forloop.counter }}();
+    {% endfor %}
+
+}
+
+{% for row in detailed_counts %}
+function drawChart_{{ forloop.counter }}() {
+
+    // Create the data table.
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', 'clade'); 
+    data.addColumn('number', 'amount'); 
+    data.addRows([
+            {% for header in detailed_headers %} 
+            ['{{ header }}',{{ row|dictvalue:header }}],
+            {% endfor %}
+            ]);
+
+    // Set chart options
+    var options = {
+        'backgroundColor': 'transparent',
+        'width':500,
+        'height':300};
+
+    // Instantiate and draw our chart, passing in some options.
+    var chart = new google.visualization.PieChart(document.getElementById('chart_div_{{ forloop.counter }}'));
+    chart.draw(data, options);
+}
+{% endfor %}
+</script>
+
+{% endblock %}
