--- a/templates/base.html
+++ b/templates/base.html
@@ -9,17 +9,22 @@
 
         <!--<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/fancyBox/jquery.fancybox.css">-->
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-lightbox.min.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
 
         <!--<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.fancybox.pack.js"></script>-->
         <script src="http://code.jquery.com/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <script src="{{ STATIC_URL }}js/bootstrap-lightbox.min.js"></script>
         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
        {% block head %}{% endblock %}
     </head>
 
     <body>
+        <div class="container">
+            <div class="header"></div>
+        </div>
         {% navbar id %}
         {% block navbar %}{%endblock %}
         {% block body %}{% endblock %}
