finished loading page

--- a/hmmer/templates/clades.html
+++ b/hmmer/templates/clades.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load custom_filters %}
 
+{% block head %}
+<title>Clades</title>
+{% endblock %}
+
 {% block body %}
 
 <div class="container">
