--- a/hmmer/templates/index.html
+++ b/hmmer/templates/index.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 
+{% block head %}
+<title>SymTyper</title>
+{% if not done %}
+<meta http-equiv="refresh" content="30"/>
+{% endif %}
+{% endblock %}
+
 {% block body %}
 
 <div class="container">
     <div class="row">
+        {% if done %}
         <div class="col-md-9">
             <div class="well">
                 <h2>Under Construction</h2>
@@ -17,10 +25,42 @@
                     <li><a href="#">Documentation</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="{% url 'dlEverything' id %}">Download</a></li>
-            </ul>
+                </ul>
             </div>
         </div>
- 
+        {% else %}
+        <div class="col-md-6 col-md-offset-3">
+            <div class="well">
+                <p>SymTyper is Running and may take some time to finish. To see the
+                output when Symtyper is done please follow the link: (button does not work yet, copy paste it manually)<p>
+
+
+                <div class="input-group">
+                    <input type="text" readonly value="http:/{% url 'index' id %}" class="form-control">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="button">Copy</button>
+                    </span>
+                </div><!-- /input-group -->
+                </br>
+
+
+
+                <div class="progress">
+                    <div class="progress-bar progress-bar-success" style="width: 35%">
+                        <span class="sr-only">35% Complete (success)</span>
+                    </div>
+                    <div class="progress-bar progress-bar-warning" style="width: 20%">
+                        <span class="sr-only">20% Complete (warning)</span>
+                    </div>
+                    <div class="progress-bar progress-bar-danger" style="width: 10%">
+                        <span class="sr-only">10% Complete (danger)</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        {% endif %}
+
     </div>
 </div>
 {% endblock %}
