--- a/hmmer/templates/subtypes.html
+++ b/hmmer/templates/subtypes.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% load custom_filters %}
 
+{% block head %}
+<title>Subtypes</title>
+{% endblock %}
+
+
+
 {% block body %}
 
 <div class="container">
