--- a/hmmer/templates/tree.html
+++ b/hmmer/templates/tree.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% load custom_filters %}
 
+{% block head %}
+<title>Tree</title>
+{% endblock %}
+
+
 {% block body %}
 <div class="container">
 
