--- a/hmmer/templates/upload.html
+++ b/hmmer/templates/upload.html
@@ -8,124 +8,104 @@
 {% block body %}
 <div class="container">
     <div class="row">
-    <div class="col-md-8">
-        <div class="well">
-            <h2>Under Construction</h2>
-            <p>
-            usage: symTyper.py [-h] [-v] [-t THREADS] {clade,subtype,resolveMultipleHits,builPlacementTree,stats} ...
+        <div class="col-md-8">
+            <div class="well">
+                <h2>Under Construction</h2>
+                <p>
+                usage: symTyper.py [-h] [-v] [-t THREADS] {clade,subtype,resolveMultipleHits,builPlacementTree,stats} ...
 
-            </p>
-            <p>
-            symTyper Description
+                </p>
+                <p>
+                symTyper Description
 
-            </p>
-            <p>
-            positional arguments: {clade,subtype,resolveMultipleHits,builPlacementTree,stats} Available commands
-            </p>
+                </p>
+                <p>
+                positional arguments: {clade,subtype,resolveMultipleHits,builPlacementTree,stats} Available commands
+                </p>
 
-            <p>
-            positional arguments: {clade,subtype,resolveMultipleHits,builPlacementTree,stats} Available commands
-            optional arguments: -h, --help show this help message and exit -v, --version show program's version number and exit -t THREADS, --threads THREADS
-            </p>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <input type="text" class="form-control">
-                        <span class="input-group-btn">
-                            <button class="btn btn-primary" type="button">Go!</button>
-                        </span>
-                    </div><!-- /input-group -->
-                </div><!-- /.col-lg-6 -->
+                <p>
+                positional arguments: {clade,subtype,resolveMultipleHits,builPlacementTree,stats} Available commands
+                optional arguments: -h, --help show this help message and exit -v, --version show program's version number and exit -t THREADS, --threads THREADS
+                </p>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="input-group">
+                            <input type="text" placeholder="http://hmmer/112.1382325231.99/" class="form-control">
+                            <span class="input-group-btn">
+                                <button class="btn btn-primary" type="button">Go!</button>
+                            </span>
+                        </div><!-- /input-group -->
+                    </div><!-- /.col-lg-6 -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-md-4">
-        <div class="well">
-            <div class="col-md-12">
-                <form role="form" enctype="multipart/form-data" method="post" action=".">
+        <div class="col-md-4">
+            <div class="well">
+                <div class="col-md-12">
+                    <form role="form" enctype="multipart/form-data" method="post" action=".">
 
-                    <div class="form-group{% if form.fasta_File.errors %} has-error{% endif %}">
-                        <label for="id_fasta_File">Fasta File:</label>
+                        <div class="form-group{% if form.fasta_File.errors %} has-error{% endif %}">
+                            <label for="id_fasta_File">Fasta File:</label>
 
-                        <div class="input-group">
-                            <span class="input-group-btn">
-                                <span class="btn btn-primary btn-file">
-                                    Browse...
-                                    {{ form.fasta_File }}
+                            <div class="input-group">
+                                <span class="input-group-btn">
+                                    <span class="btn btn-primary btn-file">
+                                        Browse...
+                                        {{ form.fasta_File }}
+                                    </span>
                                 </span>
+                                <input class="form-control" type="text" readonly="">
+                            </div>
+
+                            {% if form.fasta_File.errors %}
+                            <span class="help-block">
+                                <ol>
+                                    {% for error in form.fasta_File.errors %}
+                                    <li><strong> {{ error|escape }} </strong></li>
+                                    {% endfor %}
+                                </ol>
                             </span>
-                            <input class="form-control" type="text" readonly="">
+                            {% endif %}
                         </div>
 
-                        {% if form.fasta_File.errors %}
-                        <span class="help-block">
-                            <ol>
-                        {% for error in form.fasta_File.errors %}
-                            <li><strong> {{ error|escape }} </strong></li>
-                        {% endfor %}
-                            </ol>
-                        </span>
-                        {% endif %}
-                    </div>
 
+                        <div class="form-group{% if form.sample_File.errors %} has-error{% endif %}">
+                            <label for="id_sample_File">Id File:</label>
 
-                    <div class="form-group{% if form.sample_File.errors %} has-error{% endif %}">
-                        <label for="id_sample_File">Id File:</label>
-
-                        <div class="input-group">
-                            <span class="input-group-btn">
-                                <span class="btn btn-primary btn-file"> 
-                                    Browse...
-                                    {{ form.sample_File }}
+                            <div class="input-group">
+                                <span class="input-group-btn">
+                                    <span class="btn btn-primary btn-file"> 
+                                        Browse...
+                                        {{ form.sample_File }}
+                                    </span>
                                 </span>
+                                <input class="form-control" type="text" readonly="">
+                            </div>
+
+                            {% if form.sample_File.errors %}
+                            <span class="help-block">
+                                <ol>
+                                    {% for error in form.sample_File.errors %}
+                                    <li><strong> {{ error|escape }} </strong></li>
+                                    {% endfor %}
+                                </ol>
                             </span>
-                            <input class="form-control" type="text" readonly="">
+                            {% endif %}
+
                         </div>
 
-                        {% if form.sample_File.errors %}
-                        <span class="help-block">
-                            <ol>
-                        {% for error in form.sample_File.errors %}
-                            <li><strong> {{ error|escape }} </strong></li>
-                        {% endfor %}
-                            </ol>
-                        </span>
-                        {% endif %}
-
-                    </div>
-
-                    <button class="btn btn-primary" type="submit">Submit</button>
-                    {% csrf_token %}
-                </form>
+                        <button class="btn btn-primary" type="submit">Submit</button>
+                        {% csrf_token %}
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<!--{% if form.errors %}-->
-<!--<div class="row">-->
-    <!--<div class="col-md-12">-->
-        <!--<div class="alert alert-danger">-->
-            <!--<p>The operation could not be performed because one or more error(s) occurred.<br />Please resubmit the form after making the following changes:</p>-->
-            <!--<ul>-->
-                <!--{% for field in form %}-->
-                <!--{% if field.errors %}-->
-                <!--<li>{{ field.errors|striptags }}</li>-->
-                <!--{% endif %}-->
-                <!--{% endfor %}-->
-                <!--</ul>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--{% endif %}-->
-
-
-
-    </div>
-
-    <script type="text/javascript">
-        $(document)
+<script type="text/javascript">
+    $(document)
     .on('change', '.btn-file :file', function() {
             var input = $(this),
             numFiles = input.get(0).files ? input.get(0).files.length : 1,
@@ -143,7 +123,7 @@ $(document).ready( function() {
             }
             });
         }); 
-    </script>
+</script>
 
-    {% endblock %}
+{% endblock %}
 
