--- a/hmmer/templates/tree.html
+++ b/hmmer/templates/tree.html
@@ -8,33 +8,44 @@
 
 {% block body %}
 <div class="container">
+    <div class="row">
+        <div class="col-md-3">
+                <a href="#" class="thumbnail">
+                    <img src="{{ STATIC_URL }}/img/{{ id }}/placementInfo/{{ file }}/placed_clade_{{ file }}.png" alt="nwick tree" width="100%"/>
+                </a>
+                    <div class="caption">
+                        <h3>newick.png</h3>
+                    </div>
+        </div>
+        <div class="col-md-9">
+            <h2><a href="#">Trees-{{ file }}</a></h2>
+            <div>
+                {% if counts %} 
+                <table class="table-bordered table-condensed table-striped cf"> 
+                    <thead>
+                        <tr class="{% cycle '' 'altrow' as alt %}">
+                            {% for header in  headers %}
+                            <th>{{ header }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in counts %}
+                        <tr class="{% cycle alt  %}">
+                            {% for header in headers %}
+                            <td> {{ row| dictvalue:header }}  </td>
+                            {% endfor %}
 
-    <h2><a href="#">Trees-{{ file }}</a></h2>
-    <div>
-        {% if counts %} 
-        <table class="table-bordered table-condensed table-striped cf"> 
-            <thead>
-                <tr class="{% cycle '' 'altrow' as alt %}">
-                    {% for header in  headers %}
-                    <th>{{ header }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in counts %}
-                <tr class="{% cycle alt  %}">
-                    {% for header in headers %}
-                    <td> {{ row| dictvalue:header }}  </td>
-                    {% endfor %}
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                {% else %}
+                <p>No Data Available</p>
+                {% endif %}
+            </div>
 
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        {% else %}
-        <p>No Data Available</p>
-        {% endif %}
-
+        </div>
     </div>
 </div>
 {% endblock %}
